@@ -24,6 +24,8 @@ Version 1.5.11+svn:
    * The textbox history now uses CTRL+TAB and CTRL+SHIFT+TAB
    * Properly set the cursor when opening a dialog (bug #12961)
    * Fixed bug #13029: Problem with mouse-over unit identification in replays
+   * Added experimental campaign selection dialog (Only available when
+     starting with --new-widgets.)
  * WML Engine:
    * Fix incorrect or doubled "sighted" events when delaying shroud update
    * Fix sometimes doubled "select" events
